cpp-init v0.1 changelog:
* Initial version